[package]
name = "DSC-Blockchain1"
version = "0.1.0"
author =["Hoang Huu Nhan <huunhan1904@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ssh-key = "0.6.3"
openssl = { version = "0.10.61", features = [] }
walkdir = "2.4.0"
serde_yaml = { version = "0.9.29", features = [] }
zmq = "0.10.0"
serde = {version = "1.0.123", features = ["derive"] }
serde_json = "1.0.110"
simple_logger = "4.3.3"
log = "0.4.20"
anyhow = { version = "1.0.79", features = [] }